[package]
name = "etterscap"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
pnet = "0.35.0"
mac_address = "1.1.8"
ratatui = "0.29.0"
crossterm = "0.29.0"
myrustscan = "2.4.2"
get_if_addrs = "0.5.3"
getifaddrs = "0.1"
ipnet = "2"
tokio = { version = "1", features = ["full"] }
tokio-ping = "0.3.0"
futures = "0.3"
