[package]
name = "ghostpen"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
pnet = "0.35.0"
mac_address = "1.1.8"
ratatui = "0.29.0"
crossterm = "0.29.0"
myrustscan = "2.4.2"
tokio = { version = "1", features = ["full"] }
trust-dns-proto = "0.23.2"
rand = "0.9.1"
dhcproto = "0.13.0"
anyhow = "1.0.98"
whoami = "2.0.0-pre.2"